Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
             <h2 style="color: var(--dark-pink); text-align: center;">Para a minha pessoa favorita 🌹</h2>
             <p>Fofinha, amo-te desde aqui até à lua (e de volta), és a pessoa mais engraçada, carinhosa e gostosa que eu alguma vez conheci.</p>
             <p>Amo que me faças sempre querer ser melhor por ti e por mim e quero crescer contigo até sermos velhinhos.</p>
+            <p>Gosto tanto da nossa rotina, das nossas piadinhas que so nós precebemos e até de só estar a fazer nada contigo.</p>
             <p>Todos os dias que estou contigo sou a pessoa mais feliz do mundo. Obrigado por fazeres a minha vida o mais feliz possível.</p>
             <p>Espero que tenhas gostado desta prendinha. Mal posso esperar por uma vida inteira contigo .</p>
         </div>
@@ -341,4 +342,5 @@
         }
     </script>
 </body>
+
 </html>
